# nimbostratus-vst

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md
.github/workflows/: build.yml
plugin/: CloudsParams.h  CloudsPlugin.cpp  CloudsUI.cpp  DistrhoPluginInfo.h  NimbostratusParams.h  NimbostratusPlugin.cpp  NimbostratusUI.cpp
test/: offline_test.cc
